--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-cart-item/pantry-door-cart-item.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-cart-item/pantry-door-cart-item.component.html
@@ -1,140 +1,12 @@
-<tr
-  class="form__order-form-group"
-  appOrderForm
-  [formGroup]="formGroup"
-  (submit)="onSubmit()"
-  [hidden]="!isSelected"
->
-  <td>
-    <input
-      class="form__control"
-      currencyMask
-      appSelectOnFocus
-      formControlName="quantity"
-      [options]="{
-        align: 'center',
-        allowZero: false,
-        precision: '0',
-        decimal: '',
-        prefix: '',
-        thousands: '',
-        max: 100
-      }"
-    />
-  </td>
-  <td>
-    <input
-      class="form__control"
-      currencyMask
-      appSelectOnFocus
-      formControlName="height"
-      [options]="{
-        align: 'center',
-        allowZero: false,
-        precision: '0',
-        decimal: '',
-        prefix: '',
-        thousands: '',
-        max: 2500
-      }"
-    />
-  </td>
-  <td>
-    <input
-      class="form__control"
-      currencyMask
-      appSelectOnFocus
-      formControlName="width"
-      [options]="{
-        align: 'center',
-        allowZero: false,
-        precision: '0',
-        decimal: '',
-        prefix: '',
-        thousands: '',
-        max: 2500
-      }"
-    />
-  </td>
-  <td>
-    <input
-      class="form__control"
-      currencyMask
-      appSelectOnFocus
-      formControlName="chairRailHeight"
-      [options]="{
-        align: 'center',
-        allowZero: false,
-        precision: '0',
-        decimal: '',
-        prefix: '',
-        thousands: '',
-        max: 500
-      }"
-    />
-  </td>
-  <td>
-    <select
-      class="form__control text-center"
-      style="width: 95%;"
-      formControlName="chairRailTypeId"
-    >
-      <option *ngFor="let type of pantryDoorChairRailTypes" [value]="type.id">
-        {{ type.name }}
-      </option>
-    </select>
-  </td>
-  <td>
-    <input
-      class="form__control"
-      currencyMask
-      appSelectOnFocus
-      formControlName="extraRailBottom"
-      [options]="{
-        align: 'center',
-        allowZero: false,
-        precision: '0',
-        decimal: '',
-        prefix: '',
-        thousands: '',
-        max: 500
-      }"
-    />
-  </td>
-  <td>
-    <label class="form__checkbox">
-      <input type="checkbox" formControlName="top" />
-      <span></span>
-    </label>
-  </td>
-  <td>
-    <label class="form__checkbox">
-      <input type="checkbox" formControlName="bottom" />
-      <span></span>
-    </label>
-  </td>
-  <td>
-    <label class="form__checkbox">
-      <input type="checkbox" formControlName="left" />
-      <span></span>
-    </label>
-  </td>
-  <td>
-    <label class="form__checkbox">
-      <input type="checkbox" formControlName="right" />
-      <span></span>
-    </label>
-  </td>
-  <td colspan="2">
-    <input
-      type="text"
-      class="form__control"
-      style="text-align: left; width: 99%;"
-      appSelectOnFocus
-      formControlName="note"
-    />
-  </td>
-</tr>
+<app-pantry-door-form
+  #pantryDoorForm
+  appRemoveTag
+  *ngIf="isSelected"
+  [pantryDoor]="pantryDoor"
+  [pantryDoorChairRailTypes]="pantryDoorChairRailTypes"
+  (formSubmit)="onEdit($event)"
+></app-pantry-door-form>
+
 <tr
   class="duraform-order-step-two__cart-list-item"
   [ngClass]="{ animated: !hasAnimated }"
