--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-cart-item/duraform-door-cart-item.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-cart-item/duraform-door-cart-item.component.html
@@ -1,107 +1,11 @@
-<tr
-  class="form__order-form-group"
-  appOrderForm
-  [formGroup]="formGroup"
-  (submit)="onSubmit()"
-  [hidden]="!isSelected"
->
-  <td>
-    <input
-      class="form__control"
-      currencyMask
-      appSelectOnFocus
-      formControlName="quantity"
-      [options]="{
-        align: 'center',
-        allowZero: false,
-        precision: '0',
-        decimal: '',
-        prefix: '',
-        thousands: '',
-        max: 100
-      }"
-    />
-  </td>
-  <td>
-    <input
-      class="form__control"
-      currencyMask
-      appSelectOnFocus
-      formControlName="height"
-      [options]="{
-        align: 'center',
-        allowZero: false,
-        precision: '0',
-        decimal: '',
-        prefix: '',
-        thousands: '',
-        max: 2500
-      }"
-    />
-  </td>
-  <td>
-    <input
-      class="form__control"
-      currencyMask
-      appSelectOnFocus
-      formControlName="width"
-      [options]="{
-        align: 'center',
-        allowZero: false,
-        precision: '0',
-        decimal: '',
-        prefix: '',
-        thousands: '',
-        max: 2500
-      }"
-    />
-  </td>
-  <td>
-    <label class="form__checkbox">
-      <input type="checkbox" formControlName="top" />
-      <span></span>
-    </label>
-  </td>
-  <td>
-    <label class="form__checkbox">
-      <input type="checkbox" formControlName="bottom" />
-      <span></span>
-    </label>
-  </td>
-  <td>
-    <label class="form__checkbox">
-      <input type="checkbox" formControlName="left" />
-      <span></span>
-    </label>
-  </td>
-  <td>
-    <label class="form__checkbox">
-      <input type="checkbox" formControlName="right" />
-      <span></span>
-    </label>
-  </td>
-  <td>
-    <select
-      class="form__control"
-      style="width: 95%;"
-      formControlName="optionId"
-    >
-      <option [value]="null"></option>
-      <option *ngFor="let option of doorOptions" [value]="option.id">
-        {{ option.name }}
-      </option>
-    </select>
-  </td>
-  <td colspan="2">
-    <input
-      type="text"
-      class="form__control"
-      style="text-align: left; width: 99%;"
-      appSelectOnFocus
-      formControlName="note"
-    />
-  </td>
-</tr>
+<app-duraform-door-form
+  #doorForm
+  appRemoveTag
+  *ngIf="isSelected"
+  [door]="door"
+  [doorOptions]="doorOptions"
+  (formSubmit)="onEdit($event)"
+></app-duraform-door-form>
 <tr
   class="duraform-order-step-two__cart-list-item"
   [ngClass]="{ animated: !hasAnimated }"
