Create select menu component

--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-form/duraform-door-form.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-form/duraform-door-form.component.html
@@ -80,16 +80,13 @@
     </label>
   </td>
   <td>
-    <select
-      class="form__control"
-      style="width: 95%;"
-      formControlName="optionId"
-    >
-      <option [value]="null"></option>
-      <option *ngFor="let option of doorOptions" [value]="option.id">{{
-        option.name
-      }}</option>
-    </select>
+    <app-select-menu
+      [control]="formGroup.get('optionId')"
+      [allowNull]="true"
+      [values]="doorOptions"
+      [valueKey]="'id'"
+      [valueDisplay]="'name'"
+    ></app-select-menu>
   </td>
   <td>
     <input
