--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
@@ -23,6 +23,7 @@
 @import "./3-component/duraform-order-step-two";
 @import "./3-component/edge-profile-selector";
 @import "./3-component/arch-selector";
+@import "./3-component/select-menu";
 @import "./4-layout/grid";
 @import "./4-layout/primary-layout";
 @import "./5-page/duraform-page";
