Ready for step 3

--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-cart-item/duraform-door-cart-item.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-cart-item/duraform-door-cart-item.component.html
@@ -4,6 +4,7 @@
   *ngIf="isSelected"
   [door]="door"
   [doorOptions]="doorOptions"
+  [wrappingOptions]="wrappingOptions"
   (formSubmit)="onEdit($event)"
 ></app-duraform-door-form>
 <tr
@@ -20,7 +21,18 @@
   <td>{{ door.left ? "Y" : "" }}</td>
   <td>{{ door.right ? "Y" : "" }}</td>
   <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
-    {{ door.duraformDoorOption?.name }}
+    {{
+      (door.duraformDoorOption ? door.duraformDoorOption.name : "Door")
+        | uppercase
+    }}
+  </td>
+  <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
+    {{
+      (door.duraformWrappingOption
+        ? door.duraformWrappingOption.name
+        : "Single Sided"
+      ) | uppercase
+    }}
   </td>
   <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
     {{ door.note }}
