--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-cart-item/duraform-drawer-cart-item.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-cart-item/duraform-drawer-cart-item.component.html
@@ -14,7 +14,7 @@
 >
   <td>{{ duraformDrawer.quantity }}</td>
   <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
-    {{ duraformDrawer.duraformDrawerType.name }}
+    {{ duraformDrawer.duraformDrawerType.name | uppercase }}
   </td>
   <td>{{ duraformDrawer.height }}</td>
   <td>{{ duraformDrawer.width }}</td>
