--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-form/duraform-drawer-form.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-form/duraform-drawer-form.component.html
@@ -99,7 +99,8 @@
         precision: '0',
         decimal: '',
         prefix: '',
-        thousands: ''
+        thousands: '',
+        max: '2500'
       }"
     />
   </td>
@@ -115,7 +116,8 @@
         precision: '0',
         decimal: '',
         prefix: '',
-        thousands: ''
+        thousands: '',
+        max: '2500'
       }"
     />
   </td>
@@ -131,7 +133,8 @@
         precision: '0',
         decimal: '',
         prefix: '',
-        thousands: ''
+        thousands: '',
+        max: '2500'
       }"
     />
   </td>
@@ -147,7 +150,8 @@
         precision: '0',
         decimal: '',
         prefix: '',
-        thousands: ''
+        thousands: '',
+        max: '2500'
       }"
     />
   </td>
@@ -163,7 +167,8 @@
         precision: '0',
         decimal: '',
         prefix: '',
-        thousands: ''
+        thousands: '',
+        max: '2500'
       }"
     />
   </td>
@@ -184,7 +189,7 @@
       style="padding: 0.5rem 1rem;"
       (click)="onSubmit()"
     >
-      <i class="fa fa-plus-circle"></i>
+      <i class="fa fa-save"></i>
     </button>
   </td>
 </tr>
