--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-form/pantry-door-form.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-form/pantry-door-form.component.html
@@ -98,6 +98,17 @@
     />
   </td>
   <td>
+    <app-select-menu
+      [control]="formGroup.get('wrappingOptionId')"
+      [allowNull]="true"
+      [nullText]="'Single Sided'"
+      [nullOnLabel]="true"
+      [values]="wrappingOptions"
+      [valueKey]="'id'"
+      [valueDisplay]="'name'"
+    ></app-select-menu>
+  </td>
+  <td>
     <label class="form__checkbox">
       <input type="checkbox" formControlName="top" />
       <span></span>
@@ -138,7 +149,7 @@
       style="padding: 0.5rem 1rem;"
       (click)="onSubmit()"
     >
-      <i class="fa fa-plus-circle"></i>
+      <i class="fa fa-save"></i>
     </button>
   </td>
 </tr>
