--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-tab/pantry-door-tab.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-tab/pantry-door-tab.component.html
@@ -22,6 +22,10 @@
         Extra Rail <br />
         Bottom
       </th>
+      <th rowspan="2" style="width: 30rem;">
+        Duraform Options <br />
+        (e.g Double Sided, Fold Back)
+      </th>
       <th colspan="4">'X' For Square Edge</th>
       <th rowspan="2" colspan="2">Note</th>
     </tr>
@@ -36,11 +40,13 @@
     <app-pantry-door-form
       appRemoveTag
       [pantryDoorChairRailTypes]="pantryDoorChairRailTypes"
+      [wrappingOptions]="wrappingOptions"
       (formSubmit)="onAddPantryDoor($event)"
     ></app-pantry-door-form>
   </tbody>
   <tbody class="table__spacer" *ngIf="order.pantryDoors.length > 0">
     <tr>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
@@ -61,6 +67,7 @@
       *ngFor="let pantryDoor of order.pantryDoors"
       [pantryDoor]="pantryDoor"
       [pantryDoorChairRailTypes]="pantryDoorChairRailTypes"
+      [wrappingOptions]="wrappingOptions"
       (removePantryDoor)="onRemovePantryDoor($event)"
     ></app-pantry-door-cart-item>
   </tbody>
