--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-form/duraform-door-form.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-form/duraform-door-form.component.html
@@ -83,7 +83,20 @@
     <app-select-menu
       [control]="formGroup.get('optionId')"
       [allowNull]="true"
+      [nullText]="'Door'"
+      [nullOnLabel]="true"
       [values]="doorOptions"
+      [valueKey]="'id'"
+      [valueDisplay]="'name'"
+    ></app-select-menu>
+  </td>
+  <td>
+    <app-select-menu
+      [control]="formGroup.get('wrappingOptionId')"
+      [allowNull]="true"
+      [nullText]="'Single Sided'"
+      [nullOnLabel]="true"
+      [values]="wrappingOptions"
       [valueKey]="'id'"
       [valueDisplay]="'name'"
     ></app-select-menu>
@@ -105,7 +118,7 @@
       style="padding: 0.5rem 1rem;"
       (click)="onSubmit()"
     >
-      <i class="fa fa-plus-circle"></i>
+      <i class="fa fa-save"></i>
     </button>
   </td>
 </tr>
