--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-order-step-two/duraform-order-step-two.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-order-step-two/duraform-order-step-two.component.html
@@ -33,22 +33,26 @@
       <ul class="tab__headers">
         <li class="header active">Doors & Panels</li>
         <li class="header">Pantry Doors</li>
-        <li class="header">End Panels & IB Backs</li>
+        <li class="header">IB Backs</li>
         <li class="header">Drawers</li>
       </ul>
       <ul class="tab__pages">
         <li class="page active">
           <app-duraform-door-tab
             [doorOptions]="doorOptions"
+            [wrappingOptions]="wrappingOptions"
           ></app-duraform-door-tab>
         </li>
         <li class="page">
           <app-pantry-door-tab
             [pantryDoorChairRailTypes]="pantryDoorChairRailTypes"
+            [wrappingOptions]="wrappingOptions"
           ></app-pantry-door-tab>
         </li>
         <li class="page">
-          <app-end-panel-tab></app-end-panel-tab>
+          <app-end-panel-tab
+            [wrappingOptions]="wrappingOptions"
+          ></app-end-panel-tab>
         </li>
         <li class="page">
           <app-duraform-drawer-tab
