--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-process/duraform-process.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-process/duraform-process.component.html
@@ -1,30 +1,27 @@
-<ul class="duraform-process">
-  <li class="step active" (click)="onStepOneClick()">
-    <div class="step__number">1</div>
-    <div class="step__text">
-      Selec Door Design
-    </div>
-  </li>
-  <li
-    class="step"
-    [class]="{ active: order.selectedDesign }"
-    (click)="onStepTwoClick()"
-  >
-    <div class="step__number">2</div>
-    <div class="step__text">
-      Add Components
-    </div>
-  </li>
-  <li class="step">
-    <div class="step__number">3</div>
-    <div class="step__text">
-      Review Order
-    </div>
-  </li>
-  <li class="step">
-    <div class="step__number">4</div>
-    <div class="step__text">
-      Order Received
-    </div>
-  </li>
-</ul>
+<div class="duraform-process">
+  <ul>
+    <li
+      class="step active"
+      [class]="{ current: currentDisplayStep === 1 }"
+      (click)="onStepOneClick()"
+    >
+      1
+    </li>
+    <li
+      class="step"
+      [class]="{
+        active: order.selectedDesign,
+        current: currentDisplayStep === 2
+      }"
+      (click)="onStepTwoClick()"
+    >
+      2
+    </li>
+    <li class="step">
+      3
+    </li>
+    <li class="step">
+      4
+    </li>
+  </ul>
+</div>
