--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/end-panel-form/end-panel-form.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/end-panel-form/end-panel-form.component.html
@@ -26,6 +26,23 @@
       class="form__control"
       currencyMask
       appSelectOnFocus
+      formControlName="numberOfShields"
+      [options]="{
+        align: 'center',
+        allowZero: false,
+        precision: '0',
+        decimal: '',
+        prefix: '',
+        thousands: '',
+        max: 10
+      }"
+    />
+  </td>
+  <td>
+    <input
+      class="form__control"
+      currencyMask
+      appSelectOnFocus
       formControlName="height"
       [options]="{
         align: 'center',
@@ -55,21 +72,23 @@
       }"
     />
   </td>
-  <input
-    class="form__control"
-    currencyMask
-    appSelectOnFocus
-    formControlName="numberOfShields"
-    [options]="{
-      align: 'center',
-      allowZero: false,
-      precision: '0',
-      decimal: '',
-      prefix: '',
-      thousands: '',
-      max: 10
-    }"
-  />
+  <td>
+    <input
+      class="form__control"
+      currencyMask
+      appSelectOnFocus
+      formControlName="extraRailTop"
+      [options]="{
+        align: 'center',
+        allowZero: false,
+        precision: '0',
+        decimal: '',
+        prefix: '',
+        thousands: '',
+        max: 500
+      }"
+    />
+  </td>
   <td>
     <input
       class="form__control"
@@ -92,7 +111,7 @@
       class="form__control"
       currencyMask
       appSelectOnFocus
-      formControlName="extraRailTop"
+      formControlName="extraRailLeft"
       [options]="{
         align: 'center',
         allowZero: false,
@@ -103,6 +122,34 @@
         max: 500
       }"
     />
+  </td>
+  <td>
+    <input
+      class="form__control"
+      currencyMask
+      appSelectOnFocus
+      formControlName="extraRailRight"
+      [options]="{
+        align: 'center',
+        allowZero: false,
+        precision: '0',
+        decimal: '',
+        prefix: '',
+        thousands: '',
+        max: 500
+      }"
+    />
+  </td>
+  <td>
+    <app-select-menu
+      [control]="formGroup.get('wrappingOptionId')"
+      [allowNull]="true"
+      [nullText]="'Single Sided'"
+      [nullOnLabel]="true"
+      [values]="wrappingOptions"
+      [valueKey]="'id'"
+      [valueDisplay]="'name'"
+    ></app-select-menu>
   </td>
   <td>
     <label class="form__checkbox">
@@ -145,7 +192,7 @@
       style="padding: 0.5rem 1rem;"
       (click)="onSubmit()"
     >
-      <i class="fa fa-plus-circle"></i>
+      <i class="fa fa-save"></i>
     </button>
   </td>
 </tr>
