--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_box.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_box.scss
@@ -3,7 +3,7 @@
 
   &__heading {
     border-top-left-radius: 0.5rem;
-    background-color: $red-primary;
+    background-color: $blue-primary;
     color: white;
     clip-path: polygon(0 0, 90% 0, 100% 100%, 0 100%);
     font-size: 1.8rem;
