--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-process.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-process.scss
@@ -1,79 +1,97 @@
 .duraform-process {
-  cursor: pointer;
-  display: flex;
-  list-style: none;
+  border: solid 1px rgba(black, 0.3);
+  border-radius: 0.3rem;
+  box-shadow: 0 0 1rem rgba($color: black, $alpha: 0.1);
+  background-color: white;
+  margin-bottom: 1rem;
+  padding: 0.7rem 1.5rem;
+  width: max-content;
 
-  .step {
-    flex: 1;
-    padding-bottom: 2rem;
+  & > ul {
+    list-style: none;
     position: relative;
-    text-align: center;
-
-    &__number,
-    &__text {
-      transition: all 0.4s ease;
-    }
-
-    &__number {
-      align-items: center;
-      background-color: rgba($color: black, $alpha: 0.1);
-      border-radius: 100%;
-      color: rgba($color: black, $alpha: 0.2);
-      display: inline-flex;
-      font-size: 2.5rem;
-      height: 3rem;
-      justify-content: center;
-      width: 3rem;
-    }
-
-    &__text {
-      background-color: $grey-primary;
-      color: rgba($color: black, $alpha: 0.2);
-      font-size: 1.8rem;
-      margin: 0 auto;
-      padding-top: 1rem;
-      position: relative;
-      width: 60%;
-      z-index: 3;
-    }
-
-    &::before,
-    &::after {
-      background-color: $red-primary;
-      content: "";
-      display: block;
-      height: 1px;
-      left: 0;
-      position: absolute;
-      top: 45%;
-      transform: translateY(-50%);
-      transition: all 1s ease;
-      width: 100%;
-      z-index: 2;
-    }
 
     &::before {
-      transform-origin: left;
-      transform: scaleX(0) translateY(-50%);
-    }
-
-    &::after {
-      background-color: rgba($color: black, $alpha: 0.1);
+      background-color: #e6e6e6;
+      content: "";
+      display: block;
+      height: 5px;
+      left: 0;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 95%;
       z-index: 1;
     }
 
-    &.active {
-      &::before {
-        transform: scaleX(1) translateY(-50%);
+    .step {
+      align-items: center;
+      border-radius: 100%;
+      color: transparent;
+      cursor: pointer;
+      display: inline-flex;
+      font-size: 2rem;
+      font-weight: bold;
+      height: 3rem;
+      justify-content: center;
+      position: relative;
+      transition: all 0.5s ease;
+      width: 3rem;
+      z-index: 2;
+
+      &::after {
+        background-color: #ff94a4;
+        border-radius: inherit;
+        content: "";
+        display: block;
+        height: 100%;
+        left: 0;
+        position: absolute;
+        top: 0;
+        transform: scale(0.5);
+        transition: all 0.5s ease;
+        width: 100%;
+        z-index: -1;
       }
 
-      .step__number {
-        background-color: $red-primary;
+      &:not(:first-child) {
+        margin-left: 8rem;
+
+        &::before {
+          background-color: transparent;
+          content: "";
+          display: block;
+          height: 5px;
+          position: absolute;
+          right: calc(100% - 1rem);
+          top: 50%;
+          transform: translateY(-50%) scaleX(0);
+          transform-origin: left;
+          transition: all 0.3s ease;
+          width: 10rem;
+        }
+      }
+
+      &.active {
         color: white;
-      }
 
-      .step__text {
-        color: $text-default;
+        &::after {
+          background-color: $red-primary;
+          transform: scale(1);
+        }
+
+        &:not(:first-child) {
+          &::before {
+            background-color: $red-primary;
+            transform: translateY(-50%) scaleX(1);
+          }
+        }
+
+        &:hover {
+          &::after {
+            transform: scale(1.2);
+          }
+        }
       }
     }
   }
