--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-option-selector.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-option-selector.scss
@@ -3,14 +3,14 @@
   position: relative;
   padding: 0 0.5rem;
 
+  .edit-btn {
+    margin-right: 0.5rem;
+  }
+
   .input-for-display {
     display: inline-block;
     flex: 1;
     text-align: left;
-  }
-
-  .edit-btn {
-    margin-left: 0.5rem;
   }
 
   .type-list {
@@ -61,10 +61,10 @@
 
     &__form-wrapper {
       background-color: white;
-      border-radius: 0.3rem;
+      border-radius: 0.5rem;
       border: solid 1px rgba($color: black, $alpha: 0.2);
       box-shadow: 0 0 1rem rgba($color: black, $alpha: 0.3);
-      padding: 0.5rem;
+      padding: 1rem 1.5rem;
       text-align: left;
     }
   }
